# Kyra

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  example.ky  example.slg  grammar.ohm  man_or_boy_test.ky  sonar-project.properties
.github/workflows/: build.yml  lint.yml  sonarcloud.yml
Compiler/: AST.cpp  AST.hpp  ASTPrinter.cpp  ASTPrinter.hpp  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  Error.cpp  Error.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Plattform.hpp  SourceRange.cpp  SourceRange.hpp  TAST.cpp  TAST.hpp  Token.cpp  Token.hpp  Type.cpp  Type.hpp  TypeChecker.cpp  TypeChecker.hpp  main.cpp
Examples/: example.ky
Meta/: grammar.ohm
Utils/: Aliases.hpp
cmake/: FindReadline.cmake
include/: config.h
src/: CMakeLists.txt  example.slg  main.cpp
src/LibKyra/: AstLogger.cpp  AstLogger.hpp  CMakeLists.txt  Context.hpp  Exceptions.cpp  Exceptions.hpp  HasPtrAlias.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Position.cpp  Position.hpp  Result.hpp  Token.cpp  Token.hpp  TokenType.hpp  Variable.hpp
src/LibKyra/Expressions/: AccessExpr.cpp  AccessExpr.hpp  AssignmentExpr.cpp  AssignmentExpr.hpp  BinaryExpr.cpp  BinaryExpr.hpp  CallExpr.cpp  CallExpr.hpp  Expression.hpp  Forward.hpp  FunctionExpr.cpp  FunctionExpr.hpp  GroupExpr.cpp  GroupExpr.hpp  InstantiationExpr.cpp  InstantiationExpr.hpp  LambdaFunctionExpr.cpp  LambdaFunctionExpr.hpp  LiteralExpr.cpp  LiteralExpr.hpp  TypeExpr.cpp  TypeExpr.hpp  UnaryExpr.cpp  UnaryExpr.hpp  VariableExpr.cpp  VariableExpr.hpp
src/LibKyra/Runtime/: Runtime.cpp  Runtime.hpp  RuntimeContext.cpp  RuntimeContext.hpp
src/LibKyra/Statements/: BlockStmt.cpp  BlockStmt.hpp  ClassDeclarationStmt.cpp  ClassDeclarationStmt.hpp  DeclarationStmt.cpp  DeclarationStmt.hpp  ExpressionStmt.cpp  ExpressionStmt.hpp  Forward.hpp  FunDeclarationStmt.cpp  FunDeclarationStmt.hpp  IfStmt.cpp  IfStmt.hpp  PrintStmt.cpp  PrintStmt.hpp  ReturnStmt.cpp  ReturnStmt.hpp  Statement.hpp  VarDeclarationStmt.cpp  VarDeclarationStmt.hpp  WhileStmt.cpp  WhileStmt.hpp
src/LibKyra/Typing/: ClassType.cpp  ClassType.hpp  FunctionType.cpp  FunctionType.hpp  NothingType.cpp  NothingType.hpp  Type.cpp  Type.hpp  TypeChecker.cpp  TypeChecker.hpp  TypeContext.cpp  TypeContext.hpp  TypeProvider.cpp  TypeProvider.hpp  TypeRepr.cpp  TypeRepr.hpp  TypingErrors.cpp  TypingErrors.hpp
src/LibKyra/Values/: Bool.cpp  Bool.hpp  Forward.hpp  Function.cpp  Function.hpp  Klass.cpp  Klass.hpp  Nothing.cpp  Nothing.hpp  Number.cpp  Number.hpp  String.cpp  String.hpp  Value.cpp  Value.hpp
src/LibKyra/include/: Interpreter.hpp
src/LibSlg/: AstJsonPrinter.cpp  AstJsonPrinter.hpp  AstLogger.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Exceptions.hpp  Function.cpp  Function.hpp  HasPtrAlias.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Position.hpp  Token.hpp  TokenType.hpp  Value.cpp  Value.hpp  Variable.hpp  main.cpp
src/LibSlg/Expressions/: AccessExpr.hpp  AssignmentExpr.hpp  BinaryExpr.hpp  CallExpr.hpp  ComparisonExpr.hpp  EqualityExpr.hpp  Expression.hpp  FactorExpr.hpp  Forward.hpp  Function.hpp  FunctionExpr.hpp  GroupExpr.hpp  InstantiationExpr.hpp  Literal.hpp  LiteralExpr.hpp  Object.hpp  ObjectExpr.hpp  PrimaryExpr.hpp  TermExpr.hpp  TypeExpr.hpp  UnaryExpr.hpp  Variable.hpp  VariableExpr.hpp
src/LibSlg/Runtime/: Runtime.cpp  Runtime.hpp  RuntimeContext.cpp  RuntimeContext.hpp
src/LibSlg/Statements/: BlockStmt.hpp  ClassDeclarationStmt.hpp  DeclarationStmt.hpp  ExpressionStmt.hpp  Forward.hpp  PrintStmt.hpp  ReturnStmt.hpp  Statement.hpp
src/LibSlg/Typing/: ClassType.hpp  FunctionType.hpp  NativeTypes.hpp  NothingType.hpp  Type.hpp  TypeChecker.cpp  TypeChecker.hpp  TypeContext.cpp  TypeContext.hpp  TypeProvider.hpp  TypingErrors.hpp
src/LibSlg/Values/: Bool.hpp  Forward.hpp  Function.cpp  Function.hpp  Klass.cpp  Klass.hpp  Nothing.hpp  Number.hpp  Object.hpp  String.hpp  Value.cpp  Value.hpp
src/LibUtil/SmartPointers/: RefCount.hpp
tests/: CMakeLists.txt  InterpreterTest.cpp  LexerTests.cpp  exampleTest.cpp  lexerTest.cpp  parserTests.cpp
